# marvelous-databricks-course-ateya-ai

./: .gitignore  Dockerfile  README.md  bundle_monitoring.yml  cd.yml  databricks.yml  project_config.yml  pyproject.toml  test.py  test.yml
.github/: CODEOWNERS
.github/workflows/: azure_cd_example.yml  cd.yml  ci.yml
data/: data.csv  processed_data.csv  red_white_wines_combined.csv
notebooks/: classification_report.json  data_preprocessing_nb.py  data_processing_nb.py  deploy_ab_test_model.py  deploy_fe_model_serving_endpoint.py  deploy_feature_serving_endpoint.py  deploy_model_serving_endpoint.py  test_data_preprocessing_nb.py  train_register_basic_model.py  train_register_custom_model.py  train_register_fe_model.py  week5.01_create_monitoring_table.py  week5.02_create_alert.py
scrips/: 01.process_data.py  03.deploy_model.py
scripts/: 01.process_data.py  02.train_register_fe_model.py  03.deploy_model.py  04.refresh_monitor.py  process_data.py
src/wine_quality/: config.py  data_processor.py  monitoring.py  project_config.yml  utils.py
src/wine_quality/models/: basic_model.py  custom_model.py  feature_lookup_model.py
src/wine_quality/serving/: fe_model_serving.py  feature_serving.py  model_serving.py
tests/: test_api.py
titanic-survival-package/: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  invoke.yaml  pyproject.toml
titanic-survival-package/.github/actions/setup/: action.yml
titanic-survival-package/.github/workflows/: ci.yml  publish.yml
titanic-survival-package/notebooks/: 02-predicting-survival-titanic-solution.ipynb  04-titanic-survival-pipeline-solution.ipynb  week1. pretty_notebook.py  week1. ugly_notebook.py
titanic-survival-package/src/titanic_survival_model/: __init__.py  __main__.py  config.yml
titanic-survival-package/src/titanic_survival_model/config/: core.py
titanic-survival-package/src/titanic_survival_model/processing/: data_processor.py  features_tranformer.py
titanic-survival-package/tasks/: docs.py  mlflow.py
titanic-survival-package/tests/: __main__.py  test_scripts.py
